[package]
name = "relm-css"
version = "0.1.0"
authors = ["Geoff Shannon <geoffpshannon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "^0.12"
gio = "^0.8.0"
glib = "^0.9.0"
gtk = "^0.8.0"
relm = "^0.18.0"
relm-derive = "^0.18.0"

