[package]
name = "relm-css"
version = "0.1.0"
authors = ["Geoff Shannon <geoffpshannon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "^0.11"
gio = "^0.7.0"
glib = "^0.8.0"
gtk = "^0.7.0"
relm = "^0.17.0"
relm-derive = "^0.17.0"
